some edited profile pic

--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Sai Krishna Tandasi</title>
+    <link rel="icon" type="image/png" href="https://i.postimg.cc/gJNcqKxd/pngfind-com-white-yahoo-logo-transparent-4548177.png">
     <meta name="description" content="Modern portfolio showcasing creative design and development work with smooth animations and elegant user experience.">
     
     <!-- Tailwind CSS -->
@@ -323,7 +324,7 @@
                 <div class="float relative">
                     <div class="glass-card rounded-2xl p-8 max-w-md mx-auto">
                         <div class="relative">
-                            <img src="https://i.postimg.cc/PJMLcPy4/DSC-0094-01.jpg" 
+                            <img src="https://i.postimg.cc/JhrGbSGG/DSC-0094-1.jpg" 
                                  alt="Professional headshot" 
                                  class="w-full h-auto rounded-xl shadow-2xl">
                             <div class="absolute inset-0 bg-gradient-to-t from-background/20 to-transparent rounded-xl"></div>
