fixed on click behaviour of get in touch and view my work buttons

--- a/portfolio/templates/portfolio/home.html
+++ b/portfolio/templates/portfolio/home.html
@@ -291,12 +291,12 @@
 
                 <!-- Call to Action Buttons -->
                 <div class="flex flex-col sm:flex-row gap-4 justify-center lg:justify-start">
-                    <button class="bg-gradient-to-r from-violet-600 to-purple-800 px-8 py-6 text-lg rounded-lg" onclick="scrollToSection('#portfolio')">
+                    <a href="#portfolio" class = "bg-gradient-to-r from-violet-600 to-purple-800 px-8 py-6 text-lg text-white rounded-lg cursor-pointer hover:from-violet-800 hover:to-violet-1000 transition duration-300 transform hover:scale-110">
                         View My Work
-                    </button>
-                    <button class="px-8 py-6 text-lg border border-primary/30 hover:border-primary hover:bg-primary/10 rounded-lg transition-colors" onclick="scrollToSection('contact')">
+                    </a>
+                    <a href="#contact" class="bg-gradient-to-r from-violet-600 to-purple-800 px-8 py-6 text-lg text-white rounded-lg cursor-pointer hover:from-violet-800 hover:to-violet-1000 transition duration-300 transform hover:scale-110">
                         Get In Touch
-                    </button>
+                    </a>
                 </div>
 
                 <!-- Social Links -->
@@ -1043,5 +1043,7 @@
             });
         });
     </script>
+
+
 </body>
 </html>
